Ass1/submit/.antlr/BKITParser.py
# Generated from c:\Users\Hydrogen\Downloads\BK-eL\HK201\Ass201\PPL\Ass1\submit\BKIT.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class BKITParser ( Parser ):

    grammarFileName = "BKIT.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'Body'", "'Break'", "'Continue'", "'Do'", "'Else'", 
                     "'ElseIf'", "'EndBody'", "'EndIf'", "'EndFor'", "'EndWhile'", 
                     "'For'", "'Function'", "'If'", "'Parameter'", "'Return'", 
                     "'Then'", "'Var'", "'While'", "'True'", "'False'", 
                     "'EndDo'", "'='", "'+'", "'+.'", "'-'", "'-.'", "'*'", 
                     "'*.'", "'\\'", "'\\.'", "'%'", "'!'", "'&&'", "'||'", 
                     "'=='", "'!='", "'<'", "'>'", "'<='", "'>='", "'=/='", 
                     "'<.'", "'>.'", "'<=.'", "'>=.'", "'('", "')'", "'{'", 
                     "'}'", "'['", "']'", "';'", "','", "':'", "'.'" ]

    symbolicNames = [ "<INVALID>", "BLOCKCOM", "WS", "ID", "BODY", "BREAK", 
                      "CONTINUE", "DO", "ELSE", "ELSEIF", "ENDBODY", "ENDIF", 
                      "ENDFOR", "ENDWHILE", "FOR", "FUNCTION", "IF", "PARAMETER", 
                      "RETURN", "THEN", "VAR", "WHILE", "TRUE", "FALSE", 
                      "ENDDO", "ASSIGN", "ADD", "ADD_DOT", "SUB", "SUB_DOT", 
                      "MUL", "MUL_DOT", "DIV", "DIV_DOT", "MOD", "NOT", 
                      "AND", "OR", "EQ", "NOT_EQ_INT", "LT", "GT", "LTE", 
                      "GTE", "NOT_EQ_FLOAT", "LT_DOT", "GT_DOT", "LTE_DOT", 
                      "GTE_DOT", "LB", "RB", "LP", "RP", "LSB", "RSB", "SEMI", 
                      "COMMA", "COLON", "DOT", "INTLIT", "DEC", "Hexa", 
                      "Octal", "FLOATLIT", "BOOLEAN", "STRINGLIT", "UNCLOSE_STRING", 
                      "ILLEGAL_ESCAPE", "ERROR_CHAR", "UNTERMINATED_COMMENT" ]

    RULE_program = 0
    RULE_var_decl = 1
    RULE_arr_decl = 2
    RULE_indexes = 3
    RULE_index = 4
    RULE_parameter = 5
    RULE_idlist = 6
    RULE_arraytype = 7
    RULE_func_decl = 8
    RULE_body = 9
    RULE_stmt1 = 10
    RULE_stmt2 = 11
    RULE_var_decl_stmt = 12
    RULE_assignment_stmt = 13
    RULE_if_stmt = 14
    RULE_for_stmt = 15
    RULE_while_stmt = 16
    RULE_do_while_stmt = 17
    RULE_break_stmt = 18
    RULE_continue_stmt = 19
    RULE_call_stmt = 20
    RULE_return_stmt = 21
    RULE_exp = 22
    RULE_operand = 23
    RULE_func_call = 24
    RULE_rela_operator = 25
    RULE_add = 26
    RULE_sub = 27
    RULE_mul = 28
    RULE_div = 29
    RULE_literal = 30
    RULE_array = 31
    RULE_lit = 32

    ruleNames =  [ "program", "var_decl", "arr_decl", "indexes", "index", 
                   "parameter", "idlist", "arraytype", "func_decl", "body", 
                   "stmt1", "stmt2", "var_decl_stmt", "assignment_stmt", 
                   "if_stmt", "for_stmt", "while_stmt", "do_while_stmt", 
                   "break_stmt", "continue_stmt", "call_stmt", "return_stmt", 
                   "exp", "operand", "func_call", "rela_operator", "add", 
                   "sub", "mul", "div", "literal", "array", "lit" ]

    EOF = Token.EOF
    BLOCKCOM=1
    WS=2
    ID=3
    BODY=4
    BREAK=5
    CONTINUE=6
    DO=7
    ELSE=8
    ELSEIF=9
    ENDBODY=10
    ENDIF=11
    ENDFOR=12
    ENDWHILE=13
    FOR=14
    FUNCTION=15
    IF=16
    PARAMETER=17
    RETURN=18
    THEN=19
    VAR=20
    WHILE=21
    TRUE=22
    FALSE=23
    ENDDO=24
    ASSIGN=25
    ADD=26
    ADD_DOT=27
    SUB=28
    SUB_DOT=29
    MUL=30
    MUL_DOT=31
    DIV=32
    DIV_DOT=33
    MOD=34
    NOT=35
    AND=36
    OR=37
    EQ=38
    NOT_EQ_INT=39
    LT=40
    GT=41
    LTE=42
    GTE=43
    NOT_EQ_FLOAT=44
    LT_DOT=45
    GT_DOT=46
    LTE_DOT=47
    GTE_DOT=48
    LB=49
    RB=50
    LP=51
    RP=52
    LSB=53
    RSB=54
    SEMI=55
    COMMA=56
    COLON=57
    DOT=58
    INTLIT=59
    DEC=60
    Hexa=61
    Octal=62
    FLOATLIT=63
    BOOLEAN=64
    STRINGLIT=65
    UNCLOSE_STRING=66
    ILLEGAL_ESCAPE=67
    ERROR_CHAR=68
    UNTERMINATED_COMMENT=69

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(BKITParser.EOF, 0)

        def var_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Var_declContext)
            else:
                return self.getTypedRuleContext(BKITParser.Var_declContext,i)


        def func_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Func_declContext)
            else:
                return self.getTypedRuleContext(BKITParser.Func_declContext,i)


        def getRuleIndex(self):
            return BKITParser.RULE_program




    def program(self):

        localctx = BKITParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.FUNCTION or _la==BKITParser.VAR:
                self.state = 68
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [BKITParser.VAR]:
                    self.state = 66
                    self.var_decl()
                    pass
                elif token in [BKITParser.FUNCTION]:
                    self.state = 67
                    self.func_decl()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 72
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 73
            self.match(BKITParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(BKITParser.VAR, 0)

        def COLON(self):
            return self.getToken(BKITParser.COLON, 0)

        def SEMI(self):
            return self.getToken(BKITParser.SEMI, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.ID)
            else:
                return self.getToken(BKITParser.ID, i)

        def arr_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Arr_declContext)
            else:
                return self.getTypedRuleContext(BKITParser.Arr_declContext,i)


        def ASSIGN(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.ASSIGN)
            else:
                return self.getToken(BKITParser.ASSIGN, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.COMMA)
            else:
                return self.getToken(BKITParser.COMMA, i)

        def literal(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.LiteralContext)
            else:
                return self.getTypedRuleContext(BKITParser.LiteralContext,i)


        def getRuleIndex(self):
            return BKITParser.RULE_var_decl




    def var_decl(self):

        localctx = BKITParser.Var_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_var_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self.match(BKITParser.VAR)
            self.state = 76
            self.match(BKITParser.COLON)
            self.state = 79
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.state = 77
                self.match(BKITParser.ID)
                pass

            elif la_ == 2:
                self.state = 78
                self.arr_decl()
                pass


            self.state = 83
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKITParser.ASSIGN:
                self.state = 81
                self.match(BKITParser.ASSIGN)

                self.state = 82
                self.literal()


            self.state = 99
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.COMMA:
                self.state = 85
                self.match(BKITParser.COMMA)
                self.state = 88
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
                if la_ == 1:
                    self.state = 86
                    self.match(BKITParser.ID)
                    pass

                elif la_ == 2:
                    self.state = 87
                    self.arr_decl()
                    pass


                self.state = 95
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==BKITParser.ASSIGN:
                    self.state = 90
                    self.match(BKITParser.ASSIGN)
                    self.state = 93
                    self._errHandler.sync(self)
                    token = self._input.LA(1)
                    if token in [BKITParser.LP, BKITParser.INTLIT, BKITParser.FLOATLIT, BKITParser.BOOLEAN, BKITParser.STRINGLIT]:
                        self.state = 91
                        self.literal()
                        pass
                    elif token in [BKITParser.SEMI, BKITParser.COMMA]:
                        pass
                    else:
                        raise NoViableAltException(self)



                self.state = 101
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 102
            self.match(BKITParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Arr_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def indexes(self):
            return self.getTypedRuleContext(BKITParser.IndexesContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_arr_decl




    def arr_decl(self):

        localctx = BKITParser.Arr_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_arr_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.match(BKITParser.ID)
            self.state = 105
            self.indexes()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IndexesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def index(self):
            return self.getTypedRuleContext(BKITParser.IndexContext,0)


        def indexes(self):
            return self.getTypedRuleContext(BKITParser.IndexesContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_indexes




    def indexes(self):

        localctx = BKITParser.IndexesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_indexes)
        try:
            self.state = 111
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 107
                self.index()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 108
                self.index()
                self.state = 109
                self.indexes()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IndexContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LSB(self):
            return self.getToken(BKITParser.LSB, 0)

        def INTLIT(self):
            return self.getToken(BKITParser.INTLIT, 0)

        def RSB(self):
            return self.getToken(BKITParser.RSB, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_index




    def index(self):

        localctx = BKITParser.IndexContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_index)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.match(BKITParser.LSB)
            self.state = 114
            self.match(BKITParser.INTLIT)
            self.state = 115
            self.match(BKITParser.RSB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PARAMETER(self):
            return self.getToken(BKITParser.PARAMETER, 0)

        def COLON(self):
            return self.getToken(BKITParser.COLON, 0)

        def idlist(self):
            return self.getTypedRuleContext(BKITParser.IdlistContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_parameter




    def parameter(self):

        localctx = BKITParser.ParameterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_parameter)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.match(BKITParser.PARAMETER)
            self.state = 118
            self.match(BKITParser.COLON)

            self.state = 119
            self.idlist()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdlistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.ID)
            else:
                return self.getToken(BKITParser.ID, i)

        def arraytype(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.ArraytypeContext)
            else:
                return self.getTypedRuleContext(BKITParser.ArraytypeContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.COMMA)
            else:
                return self.getToken(BKITParser.COMMA, i)

        def getRuleIndex(self):
            return BKITParser.RULE_idlist




    def idlist(self):

        localctx = BKITParser.IdlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_idlist)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.state = 121
                self.match(BKITParser.ID)
                pass

            elif la_ == 2:
                self.state = 122
                self.arraytype()
                pass


            self.state = 132
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.COMMA:
                self.state = 125
                self.match(BKITParser.COMMA)
                self.state = 128
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
                if la_ == 1:
                    self.state = 126
                    self.match(BKITParser.ID)
                    pass

                elif la_ == 2:
                    self.state = 127
                    self.arraytype()
                    pass


                self.state = 134
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArraytypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def LSB(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.LSB)
            else:
                return self.getToken(BKITParser.LSB, i)

        def exp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.ExpContext)
            else:
                return self.getTypedRuleContext(BKITParser.ExpContext,i)


        def RSB(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.RSB)
            else:
                return self.getToken(BKITParser.RSB, i)

        def getRuleIndex(self):
            return BKITParser.RULE_arraytype




    def arraytype(self):

        localctx = BKITParser.ArraytypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_arraytype)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self.match(BKITParser.ID)
            self.state = 136
            self.match(BKITParser.LSB)
            self.state = 137
            self.exp(0)
            self.state = 138
            self.match(BKITParser.RSB)
            self.state = 145
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,12,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 139
                    self.match(BKITParser.LSB)
                    self.state = 140
                    self.exp(0)
                    self.state = 141
                    self.match(BKITParser.RSB) 
                self.state = 147
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,12,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(BKITParser.FUNCTION, 0)

        def COLON(self):
            return self.getToken(BKITParser.COLON, 0)

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def body(self):
            return self.getTypedRuleContext(BKITParser.BodyContext,0)


        def parameter(self):
            return self.getTypedRuleContext(BKITParser.ParameterContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_func_decl




    def func_decl(self):

        localctx = BKITParser.Func_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_func_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 148
            self.match(BKITParser.FUNCTION)
            self.state = 149
            self.match(BKITParser.COLON)
            self.state = 150
            self.match(BKITParser.ID)
            self.state = 152
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKITParser.PARAMETER:
                self.state = 151
                self.parameter()


            self.state = 154
            self.body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BODY(self):
            return self.getToken(BKITParser.BODY, 0)

        def COLON(self):
            return self.getToken(BKITParser.COLON, 0)

        def stmt2(self):
            return self.getTypedRuleContext(BKITParser.Stmt2Context,0)


        def ENDBODY(self):
            return self.getToken(BKITParser.ENDBODY, 0)

        def DOT(self):
            return self.getToken(BKITParser.DOT, 0)

        def var_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Var_declContext)
            else:
                return self.getTypedRuleContext(BKITParser.Var_declContext,i)


        def getRuleIndex(self):
            return BKITParser.RULE_body




    def body(self):

        localctx = BKITParser.BodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_body)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 156
            self.match(BKITParser.BODY)
            self.state = 157
            self.match(BKITParser.COLON)
            self.state = 161
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,14,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 158
                    self.var_decl() 
                self.state = 163
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,14,self._ctx)

            self.state = 164
            self.stmt2()
            self.state = 165
            self.match(BKITParser.ENDBODY)
            self.state = 166
            self.match(BKITParser.DOT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Stmt1Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_decl_stmt(self):
            return self.getTypedRuleContext(BKITParser.Var_decl_stmtContext,0)


        def assignment_stmt(self):
            return self.getTypedRuleContext(BKITParser.Assignment_stmtContext,0)


        def if_stmt(self):
            return self.getTypedRuleContext(BKITParser.If_stmtContext,0)


        def for_stmt(self):
            return self.getTypedRuleContext(BKITParser.For_stmtContext,0)


        def while_stmt(self):
            return self.getTypedRuleContext(BKITParser.While_stmtContext,0)


        def do_while_stmt(self):
            return self.getTypedRuleContext(BKITParser.Do_while_stmtContext,0)


        def break_stmt(self):
            return self.getTypedRuleContext(BKITParser.Break_stmtContext,0)


        def continue_stmt(self):
            return self.getTypedRuleContext(BKITParser.Continue_stmtContext,0)


        def call_stmt(self):
            return self.getTypedRuleContext(BKITParser.Call_stmtContext,0)


        def return_stmt(self):
            return self.getTypedRuleContext(BKITParser.Return_stmtContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_stmt1




    def stmt1(self):

        localctx = BKITParser.Stmt1Context(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_stmt1)
        try:
            self.state = 178
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,15,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 168
                self.var_decl_stmt()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 169
                self.assignment_stmt()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 170
                self.if_stmt()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 171
                self.for_stmt()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 172
                self.while_stmt()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 173
                self.do_while_stmt()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 174
                self.break_stmt()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 175
                self.continue_stmt()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 176
                self.call_stmt()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 177
                self.return_stmt()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Stmt2Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Var_declContext)
            else:
                return self.getTypedRuleContext(BKITParser.Var_declContext,i)


        def stmt1(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Stmt1Context)
            else:
                return self.getTypedRuleContext(BKITParser.Stmt1Context,i)


        def getRuleIndex(self):
            return BKITParser.RULE_stmt2




    def stmt2(self):

        localctx = BKITParser.Stmt2Context(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_stmt2)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 183
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,16,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 180
                    self.var_decl() 
                self.state = 185
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,16,self._ctx)

            self.state = 189
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,17,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 186
                    self.stmt1() 
                self.state = 191
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,17,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_decl_stmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_decl(self):
            return self.getTypedRuleContext(BKITParser.Var_declContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_var_decl_stmt




    def var_decl_stmt(self):
